notification-microservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notif-srv
  namespace: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notif-srv
  template:
    metadata:
      labels:
        app: notif-srv
    spec:
      containers:
      - name: notif-srv
        image: docker.io/eydarouaz/notif-srv:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "notif-secrets"
          nodePublishSecretRef:
            name: secrets-store-creds
