notification-microservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notif-srv
  namespace: application
spec:
  selector:
    app: notif-srv
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
